--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,7 +14,9 @@
   "editor.formatOnSave": true,
   "eslint.nodePath": ".yarn/sdks",
   "eslint.options": {
-    "flags": ["unstable_ts_config"],
+    "flags": [
+      "unstable_ts_config"
+    ],
     "overrideConfigFile": ".vscode/eslint.config.ts"
   },
   "extensions.ignoreRecommendations": false,
