--- a/.github/workflows/release-creator.yml
+++ b/.github/workflows/release-creator.yml
@@ -1,23 +1,19 @@
 name: Release Creator
 
-# on:
-#   pull_request:
-#     branches:
-#       - main
-#     types:
-#       - closed
-
 on:
-  push:
+  pull_request:
     branches:
       - main
+    types:
+      - closed
+  workflow_dispatch:
 
 permissions:
   contents: read
 
 jobs:
   update-release-draft:
-    # if: github.event.pull_request.merged == true
+    if: github.event.pull_request.merged == true
     permissions:
       contents: write
       pull-requests: write
