--- a/.github/workflows/typedoc.yml
+++ b/.github/workflows/typedoc.yml
@@ -11,7 +11,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  do-typedoc:
+  run-typedoc:
     runs-on: ubuntu-latest
     permissions:
       contents: write
