--- a/package.json
+++ b/package.json
@@ -1,20 +1,51 @@
 {
-  "author": "aSumo",
-  "babel": {
-    "presets": [
-      "@babel/env",
-      "@babel/typescript"
-    ]
-  },
+  "name": "vitepress-linkcard",
+  "version": "2.0.1",
+  "description": "A Vitepress plugin to generate a pretty linkcard with OGP.",
+  "keywords": [
+    "linkcard",
+    "markdown-it",
+    "metadata",
+    "ogp",
+    "thumbnail",
+    "typescript",
+    "vite",
+    "vitepress"
+  ],
   "bugs": {
     "url": "https://github.com/asumo-1xts/vitepress-linkcard"
   },
-  "description": "A Vitepress plugin to generate a pretty linkcard with OGP.",
+  "license": "MIT",
+  "author": "aSumo",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/asumo-1xts/vitepress-linkcard.git"
+  },
+  "files": [
+    "dist",
+    "types"
+  ],
+  "type": "module",
+  "main": "./dist/.esm.min.js",
+  "module": "./dist/.esm.min.js",
+  "types": "./types/index.d.ts",
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/"
+  },
+  "scripts": {
+    "build": "tsc && rollup -c",
+    "clean": "rm -rf dist types",
+    "dev": "rollup -c -w",
+    "docs": "typedoc",
+    "format": "oxfmt --write",
+    "lint": "oxlint",
+    "lint:github": "oxlint --format=github",
+    "type:dts": "tsc --emitDeclarationOnly"
+  },
   "devDependencies": {
     "@babel/core": "^7.28.5",
     "@babel/preset-env": "^7.28.5",
     "@babel/preset-typescript": "^7.28.5",
-    "@eslint/js": "^9.39.2",
     "@luckrya/utility": "^0.1.1",
     "@rollup/plugin-babel": "^6.1.0",
     "@rollup/plugin-commonjs": "^29.0.0",
@@ -22,58 +53,22 @@
     "@types/babel__core": "^7",
     "@types/markdown-it": "^13.0.2",
     "@types/node": "^25.0.3",
-    "eslint": "^9.39.2",
-    "eslint-plugin-vue": "^10.6.2",
     "globals": "^16.5.0",
-    "jiti": "^2.6.1",
     "markdown-it": "^13.0.2",
-    "npm-check-updates": "^19.2.0",
-    "prettier": "^3.7.4",
+    "oxfmt": "^0.26.0",
+    "oxlint": "^1.41.0",
     "rollup": "^2.79.2",
     "rollup-plugin-terser": "^7.0.2",
     "typedoc": "^0.28.15",
     "typedoc-theme-hierarchy": "^6.0.0",
     "typescript": "^5.9.3",
-    "typescript-eslint": "^8.50.1",
-    "vue-eslint-parser": "^10.2.0",
     "xmlhttprequest": "^1.8.0"
   },
-  "files": [
-    "dist",
-    "types"
-  ],
-  "keywords": [
-    "thumbnail",
-    "typescript",
-    "markdown-it",
-    "metadata",
-    "ogp",
-    "linkcard",
-    "vite",
-    "vitepress"
-  ],
-  "license": "MIT",
-  "main": "./dist/.esm.min.js",
-  "module": "./dist/.esm.min.js",
-  "name": "vitepress-linkcard",
-  "packageManager": "yarn@4.9.2",
-  "publishConfig": {
-    "registry": "https://registry.npmjs.org/"
+  "babel": {
+    "presets": [
+      "@babel/env",
+      "@babel/typescript"
+    ]
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/asumo-1xts/vitepress-linkcard.git"
-  },
-  "scripts": {
-    "build": "tsc && rollup -c",
-    "clean": "rm -rf dist types",
-    "dev": "rollup -c -w",
-    "docs": "yarn typedoc",
-    "format": "yarn prettier --config .vscode/.prettierrc.json --write .config/*.json .github/workflows .vscode src *.json && rm -rf node_modules",
-    "lint": "yarn eslint --config .vscode/eslint.config.ts src/**/*",
-    "type:dts": "tsc --emitDeclarationOnly"
-  },
-  "type": "module",
-  "types": "./types/index.d.ts",
-  "version": "2.0.1"
+  "packageManager": "yarn@4.9.2"
 }
