--- a/.github/workflows/publish-npm.yml
+++ b/.github/workflows/publish-npm.yml
@@ -2,31 +2,22 @@ name: Publish to NPM
 
 on: workflow_dispatch
 
+permissions:
+  id-token: write
+  contents: read
+
 jobs:
   publish-npm:
     runs-on: ubuntu-latest
-    permissions:
-      id-token: write
-      contents: read
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v5
-        with:
-          ref: main
-          fetch-depth: 0
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - uses: actions/checkout@v5
+      - uses: actions/setup-node@v6
         with:
           registry-url: 'https://registry.npmjs.org/'
-      - name: Enable Yarn
-        run: |
+      - run: |
           npm uninstall -g yarn
           corepack enable
           corepack prepare yarn@4.9.2 --activate
           yarn install --immutable
-      - name: Build and publish
-        run: |
           yarn build
           yarn npm publish --access public
-        env:
-          YARN_NPM_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
