chore: Simplify and correct Actions

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -16,15 +16,11 @@ jobs:
       contents: read
       pull-requests: write
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v5
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-      - name: Yarn commands
-        run: |
+      - uses: actions/checkout@v5
+      - uses: actions/setup-node@v6
+      - run: |
           npm uninstall -g yarn
           corepack enable
           corepack prepare yarn@4.9.2 --activate
           yarn install --immutable
-      - name: Lint
-        run: yarn lint:github
+          yarn lint:github
