--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,6 @@
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/sdks
-!.yarn/versions
+.yarn/
 dist/
 types/
+node_modules/
 docs/
 .ssh/
-node_modules/
-package-lock.json
